# internal-tools-backend

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/core/: config.py  errors.py  exception_handlers.py  logging.py
app/db/: database.py
app/models/: __init__.py  access_request.py  category.py  cost_tracking.py  enum_types.py  tool.py  usage_log.py  user.py  user_tool_access.py
app/repositories/: __init__.py  department_repository.py  tool_repository.py
app/router/: analytics.py  dependencies.py  tool.py
app/schemas/: __init__.py  common.py  department.py  tool.py
app/services/: __init__.py  tool_service.py
app/services/department/: __init__.py  department_cost_aggregator.py  department_cost_calculator.py  department_service.py
docs/: architecture.md  erd.mermaid
docs/analytics_queries/: 1_department_cost.md  2_expensive_tools_analysis.md  3_tools_by_category.md  4_low-usage-tools.md  5_vendor-summary.md  README.md
tests/: README.md  conftest.py
tests/factories/: __init__.py  base.py  category_factory.py  cost_tracking_factory.py  tool_factory.py  usage_log_factory.py  user_factory.py  user_tool_access_factory.py
tests/fixtures/: __init__.py  data.py
tests/fixtures/department/: __init__.py  data.py  services.py
tests/repositories/department_repository/: test_get_department_costs_data.py
tests/router/: README.md  __init__.py  test_database_errors.py
tests/router/analytics/: README.md  test_department_costs.py  test_expensive_tools.py
tests/router/tool/: README.md  __init__.py  test_create_tool.py  (+3 more)
(+1 files in other folders)
